--- a/package.json
+++ b/package.json
@@ -7,14 +7,16 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cookie": "^0.4.1",
     "cookie-parser": "^1.4.5",
     "debug": "~2.6.9",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
-    "express-session": "^1.17.1",
+    "express-session": "^1.17.2",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
     "mysql2": "^2.2.5",
+    "parser": "^0.1.4",
     "sequelize": "^6.6.2"
   }
 }
